--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --mode=development",
     "release": "webpack --mode=production",
-    "dev": "nodemon  dist/bundle.js"
+    "dev": "nodemon  dist/bundle.mjs"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
